[package]
name = "infisical-c"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

[lib]
crate-type = ["staticlib", "cdylib"]
bench = false

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
tokio = { version = ">=1.28.2, <2.0", features = ["rt-multi-thread", "macros"] }

infisical-json = { path = "../infisical-json" }

[dependencies]
env_logger = ">=0.10.0, <0.11"
