[package]
name = "infisical-py"
version = "1.0.1"
edition = "2021"
rust-version = "1.57"

[lib]
name = "infisical_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-log = "0.9.0"
infisical-json = { path = "../infisical-json" }

[build-dependencies]
pyo3-build-config = { version = "0.20.0" }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
pyo3-asyncio = { version = "0.20.0", features = [
    "attributes",
    "tokio-runtime",
    
] }
