[package]
name = "sdk-schemas"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

[features]

[dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"
schemars = { version = "0.8.16", features = ["preserve_order"] }
serde_json = "1.0.108"

infisical = { path = "../infisical" }
infisical-json = { path = "../infisical-json" }
